--- a/python/pn/ressources.yml
+++ b/python/pn/ressources.yml
@@ -9,7 +9,7 @@ S1:
   R108: "Bases des systèmes d'exploitation"
   R109: "Introduction aux technologies Web"
   R110: "Anglais de communication et initiation au vocabulaire technique"
-  R111: "Expression-Culture-Communication Professionnelles 1"
+  R111: "Expression-Culture-Communication Professionnelles (ECC1)"
   R112: "PPP: Connaître son champ d'activité"
   R113: "Mathématiques du signal"
   R114: "Mathématiques des transmissions"
@@ -22,7 +22,7 @@ S2:
   R205: "Signaux et Systèmes pour les transmissions"
   R206: "Numérisation de l'information"
   R207: "Sources de données"
-  R208: "Traitement de données en programmation"
+  R208: "Analyse et traitement de données structurées"
   R209: "Initiation au développement Web"
   R210: "Développement de l'anglais technique"
   R211: "Expression-Culture-Communication Professionnelles 2"
