Intègre l'affichage des pré-requis

--- a/python/pn/saes.yml
+++ b/python/pn/saes.yml
@@ -5,8 +5,8 @@ S1:
   SAE14: "Se présenter sur Internet"
   SAE15: "Traiter des données"
 S2:
-  SAE21: ""
-  SAE22: ""
-  SAE23: ""
-  SAE24: ""
+  SAE21: "Construction d’un réseau informatique pour une petite structure"
+  SAE22: "Mesures et caractérisation d’un signal ou d’un système"
+  SAE23: "Mise en place d'une solution informatique pour l’entreprise"
+  SAE24: "Projet intégratif de S2"
 
