ajout du traitement des saé mentionnées dans les ressources

--- a/python/pn/saes.yml
+++ b/python/pn/saes.yml
@@ -1,12 +1,12 @@
 S1:
-  SAE11: "Réseaux / cybersécurité / hygiène informatique"
-  SAE12: "Réseau d'entreprise ou personnel"
-  SAE13: "Supports de transmission / calculs"
-  SAE14: "Se présenter sur Internet"
-  SAE15: "Traiter des données"
+  SAÉ11: "Réseaux / cybersécurité / hygiène informatique"
+  SAÉ12: "Réseau d'entreprise ou personnel"
+  SAÉ13: "Supports de transmission / calculs"
+  SAÉ14: "Se présenter sur Internet"
+  SAÉ15: "Traiter des données"
 S2:
-  SAE21: "Construction d’un réseau informatique pour une petite structure"
-  SAE22: "Mesures et caractérisation d’un signal ou d’un système"
-  SAE23: "Mise en place d'une solution informatique pour l’entreprise"
-  SAE24: "Projet intégratif de S2"
+  SAÉ21: "Construction d’un réseau informatique pour une petite structure"
+  SAÉ22: "Mesures et caractérisation d’un signal ou d’un système"
+  SAÉ23: "Mise en place d'une solution informatique pour l’entreprise"
+  SAÉ24: "Projet intégratif de S2"
 
