--- a/python/export/R110.yml
+++ b/python/export/R110.yml
@@ -13,26 +13,19 @@ sae:
 - SAÉ13
 - SAÉ14
 prerequis: Aucun
-contexte: >
+contexte: >-
+  Aucun
 contenu: >-
   Objectifs visés
-
   * Développer sa confiance en soi
-
   * Se présenter, présenter quelqu’un, interroger
-
   * Savoir structurer son discours oral et écrit (courriel, conversation téléphonique,
   visioconférence…)
-
   * Décrire, expliquer un élément technique
-
   * Savoir écouter, comprendre et analyser les demandes de son interlocuteur, suggérer
   des solutions
-
   * Reformuler, expliciter un message
-
   * Appréhender le vocabulaire technique des domaines cibles
-
   *  Extensions possibles : télécollaboration, télétandem.
 motscles: Anglais général et technique, situations de communication, expression et
   compréhension.
