--- a/python/export/R111.yml
+++ b/python/export/R111.yml
@@ -13,36 +13,24 @@ sae:
 - SAÉ13
 - SAÉ14
 prerequis: Aucun
-contexte: >
+contexte: >-
+  Aucun
 contenu: >-
   * Rechercher, sélectionner ses sources et questionner leur fiabilité
-
   * Analyser et restituer des informations
-
   * Produire des écrits courts, clairs, structurés, adaptés et répondant aux normes
   de présentation professionnelle et académique (mail, argumentation courte…)
-
   * Réécrire et corriger ses documents
-
   * Découvrir des outils de traitement de texte et de partage des données
-
   * Renforcer les compétences linguistiques selon différents canaux
-
   * Élaborer un discours clair et efficace dans un contexte simple
-
   * Être attentif à ses manières de communiquer (dimensions verbale et nonverbale)
-
   * Comprendre une situation de communication simple
-
   * Savoir utiliser des outils multimédia pour une présentation orale
-
   * Décrire et analyser l’image fixe et mobile
-
   * Adopter des savoirêtre professionnels essentiels dans le travail en équipe (écoute,
   reformulation, transmission des informations, explications…)
-
   * S’initier aux objectifs du développement durable
-
   * Être sensible aux enjeux du monde contemporain
 motscles: Recherche documentaire, expression écrite, rédaction technique, expression
   orale, médias, culture générale, esprit critique, développement durable
