--- a/python/export/R101.yml
+++ b/python/export/R101.yml
@@ -19,42 +19,28 @@ contexte: >-
   entreprises et les usagers" (RT2). Elle contribue aussi à la compétence "Créer des
   outils et applications informatiques pour les R&T" (RT3) à travers la découverte
   du poste client et de son environnement logiciel. 
-
   À travers des exercices de mise en place progressive de réseaux locaux, d'interconnection
   d'équipements et de prise en main des fonctions de base des systèmes d'exploitation,
   l'étudiant découvrira les principaux concepts utilisés dans les réseaux informatiques,
   et commencera à comprendre le rôle et les principes des normes et protocoles essentiels
   des réseaux locaux, comme Ethernet, TCP/IP, DHCP, DNS.
-
   On introduira des notions de sécurité informatique (les ressources associées aux
-  recommandations de l’ANSSI, CyberEdu, CyberMalveillance pourront servir de support)
+  recommandations de l’ANSSI, CyberEdu, CyberMalveillance pourront servir de support).
 contenu: >-
-  * / Initiation au réseau
-
+  *  Initiation au réseau
   	*  Découverte et prise en main du réseau local
-
   	*  Adressage IPv4 : classes d'adresses, masques naturels, adressage statique, adressage
   dynamique (DHCP)
-
   	*  Notion de routage, de passerelle et de serveur DNS
-
-  		* / Bases du système d'exploitation
-
+  *  Bases du système d'exploitation
   	*  Architecture d'un système d'exploitation
-
   	*  Différents types de systèmes d'exploitation : les clients, les serveurs, les
   systèmes embarqués,
-
   	*  Systèmes d'exploitation commerciaux et Open Sources.
-
   	*  Administration des systèmes d'exploitation
-
   	*  Architectures réseaux et systèmes d'exploitation
-
-  			* / Architecture client-serveur dans un réseau local
-
+  *  Architecture client-serveur dans un réseau local
   	*  Mise en place d'une architecture client/serveur simple (serveur d'authentification
   / de fichiers et postes clients associés)
-
-  XXX expliciter la place des notions de sécurité informatique citées au dessus.
+  *  Introduction à la sécurité informatique
 motscles: Réseau, système d'exploitation, TCP/IP, LAN, hygiène informatique.
