--- a/python/export/R102.yml
+++ b/python/export/R102.yml
@@ -2,7 +2,7 @@ nom: Principes et architecture des réseaux
 code: R102
 semestre: 1
 heures_formation: '30'
-heures_tp: '12'
+heures_tp: '15'
 acs:
 - - AC114
   - AC115
@@ -17,22 +17,13 @@ prerequis:
 contexte: >-
   Cette ressource apporte le socle de connaissances et savoirs-faire pour les compétences
   de cœur de métier "Administrer les réseaux et l'Internet" (RT1). 
-
-  On introduira des notions de sécurité informatique (les ressources associées aux
-  recommandations de l’ANSSI, CyberEdu, CyberMalveillance pourront servir de support)....à
-  rédiger
 contenu: >-
   * Approche en couches et encapsulation ,
-
   * Etude détaillée des protocoles Ethernet, ARP, ICMP
-
   * Découverte des protocoles IPv4&6, ICMPv6, TCP, UDP et des protocoles applicatifs,
-
   * Topologies de réseaux,
-
   * Principes de normalisation des technologies de l’Internet,
-
   * Notions sur les métriques de performances: débit, fiabilité, gigue, taux de pertes
-
-  Outils préconisés: logiciels du type wireshark, gns3, packet tracer, scapy, marionnet.
+  Outils préconisés: logiciels du type wireshark, gns3, packet tracer, scapy, marionnet.Faire
+  le lien avec les aspects sécurité informatique et réseaux mentionnés en R101.
 motscles: 'Architecture en couches, topologies, protocoles, modèle TCP/IP. '
