--- a/python/export/R104.yml
+++ b/python/export/R104.yml
@@ -10,40 +10,27 @@ acs:
 sae: []
 prerequis: Aucun
 contexte: >-
-  Cette ressource apporte le socle de connaissances et savoir-faire pour les compétences
-  de cœur de métier "Administrer les réseaux et l'Internet" (RT1) et "Connecter les
-  entreprises et les usagers" (RT2)
-
   La connaissance des phénomènes électriques, la maîtrise des grandeurs électriques
   et de leurs mesures, ainsi que la notion de puissance permettent à l’étudiant de
   comprendre le fonctionnement des systèmes télécom et de travailler sur les signaux.
-
   Les notions de dimensionnement électrique concourent à la sécurité du fonctionnement
-  des équipements réseaux et télécoms.
-
-  La puissance maximale permet d’aborder les problèmes d’adaptation d’impédance.
-
+  des équipements réseaux et télécoms. La puissance maximale permet d’aborder les
+  problèmes d’adaptation d’impédance.
   A travers des exercices de mise en place de circuits simples, les étudiants seront
   capables d’implanter des circuits, de placer les instruments de mesure et d’interpréter
   les résultats.
 contenu: >-
-  Lois de base de l’électricité, théorèmes fondamentaux, pont diviseur, ...
-
-  Résistance et Condensateur. Savoir réaliser un circuit simple et savoir brancher
+  *  Lois de base de l’électricité, théorèmes fondamentaux, pont diviseur
+  * Résistance et Condensateur. Savoir réaliser un circuit simple et savoir brancher
   les appareils de mesure sur platine d’expérimentation
-
-  Mesure de signaux avec calculs simples (voltmètre, tension moyenne, efficace...)
-
-  Représentation temporelle des signaux simples. Utilisation de l’oscilloscope (chronogramme).
-
-  Définition de la puissance électrique. Adaptation “d’impédance” par le calcul de
-  la puissance maximale.
-
-  Dimensionnement des puissances d’une installation télécom ou réseau. Sensibilisation
+  * Mesure de signaux avec calculs simples (voltmètre, tension moyenne, efficace...)
+  * Représentation temporelle des signaux simples. Utilisation de l’oscilloscope (chronogramme).
+  * Définition de la puissance électrique. Adaptation “d’impédance” par le calcul
+  de la puissance maximale.
+  * Dimensionnement des puissances d’une installation télécom ou réseau. Sensibilisation
   à la sécurité électrique et au Développement Durable. Coût de fonctionnement des
   équipements.
-
-  Exemple : dimensionnement d’une alimentation pour des serveurs, limite de puissance
-  sur un câble (alternatif ou continu)
-motscles: Mesures, Oscilloscope, Voltmètre, Puissance, Dimensionnement, Adaptation
-  d’impédance,
+  * Exemples : dimensionnement d’une alimentation pour des serveurs, limite de puissance
+  sur un câble (alternatif ou continu).
+motscles: Mesures, oscilloscope, voltmètre, puissance, dimensionnement, adaptation
+  d’impédance.
