--- a/python/export/R114.yml
+++ b/python/export/R114.yml
@@ -12,41 +12,25 @@ sae:
 - SAÉ13
 - SAÉ22
 prerequis: Aucun
-contexte: >
+contexte: >-
+  Aucun
 contenu: >-
   * ) Trigonométrie
-
   	*  formules  , idem avec sinus
-
   	*  lien avec les vecteurs et le produit scalaire
-
   	*  forme
-
   	*  fonctions trigonométriques réciproques (en particulier arctangente)
-
   		* ) Fonctions logarithme et exponentielle, puissances
-
   	*  graphes
-
   	*  propriétés, retour sur les propriétés des puissances
-
   	*  application au dB
-
   			* ) Nombres complexes
-
   	*  forme algébrique
-
   	*  addition, multiplication et division avec la forme algébrique
-
   	*  forme exponentielle (retour sur les propriétés de l’expo)
-
   	*  addition, multiplication et division avec la forme exponentielle
-
   	*  formules d’Euler
-
   	*  interprétation géométrique, lien avec les vecteurs
-
   	*  lien avec la trigonométrie
-
   	*  racines complexes d’un polynôme de degré 2 (à coefficients réels)
 motscles: Trigonométrie, logarithme, exponentielle, complexes
