--- a/python/export/R205.yml
+++ b/python/export/R205.yml
@@ -2,37 +2,31 @@ nom: Signaux et Systèmes pour les transmissions
 code: R205
 semestre: 2
 heures_formation: ???
-heures_tp: ???
+heures_tp: '15'
 acs:
 - - AC111
 - - AC211
   - AC212
-  - AC213
 - []
-sae: []
-prerequis: Aucun
+sae:
+- SAÉ22
+prerequis:
+- R113,
+- R114,
 contexte: >-
-  Cette ressource apporte le socle de connaissances et savoir-faire pour les compétences
-  de cœur de métier "Administrer les réseaux et l'Internet" (RT1) et "Connecter les
-  entreprises et les usagers" (RT2)
-
   La caractérisation du comportement d’un système télécom en fonction de la fréquence
   permet au technicien d’appréhender la notion de bande passante et d’introduire celle
   de canal de transmission.
-
   La représentation spectrale des signaux permet de comprendre quelles modifications
   ces signaux vont subir dans un système télécom.
 contenu: >-
   Étude de la fonction de transfert d’un système linéaire  – Notion de filtrage –
   Réponse fréquentielle d’un support de transmission – Notion de bande passante. Atténuation,
   amplification des systèmes.
-
   Représentations temporelles et fréquentielles des signaux - Analyse spectrale de
-  signaux réels (exemples : audio, WiFi, ADSL, …).
-
+  signaux réels (exemples : audio, WiFi, ADSL, etc.).
   Influence de la fonction de transfert d’un système sur un signal (exemples : audio,
   numérique, …)
-
   Bilans de liaison de systèmes de transmissions
-motscles: Représentations temporelles et fréquentielles des signaux - Fonction de
-  transfert - Bande passante - Analyse spectrale
+motscles: Représentations temporelles et fréquentielles des signaux; fonction de transfert;
+  bande passante; analyse spectrale.
