--- a/python/export/R214.yml
+++ b/python/export/R214.yml
@@ -2,7 +2,7 @@ nom: Analyse des signaux
 code: R214
 semestre: 2
 heures_formation: ???
-heures_tp: ???
+heures_tp: '6'
 acs:
 - - AC111
 - - AC211
@@ -12,37 +12,23 @@ sae:
 - SAÉ22
 prerequis:
 - R113,
-contexte: >
+contexte: >-
+  Aucun
 contenu: >-
   * ) Dérivée
-
   	*  définition
-
   	*  notation s’(t)=ds/dt
-
   	*  équation de la tangente
-
   	*  dérivée des fonctions usuelles
-
   	*  opérations sur les dérivées (somme, produit, quotient, composition)
-
   	*  sens de variation
-
   	*  application à la recherche d’optimum local
-
   		* ) Comportement local et asymptotique
-
   	*  limites (opérations, formes indéterminées)
-
   	*  fonctions négligeables, équivalents
-
   			* ) Intégration
-
   	*  définition d’une intégrale comme une surface
-
   	*  primitive
-
   	*  calcul d’une intégrale à l’aide d’une primitive
-
   	*  intégration par parties et changement de variable
 motscles: Dérivées, Intégrales, limites
